--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
+    "countup.js": "^2.9.0",
     "element-plus": "^2.12.0",
     "i": "^0.3.7",
     "pinia": "^3.0.4",
