--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
     "countup.js": "^2.9.0",
+    "echarts": "^6.0.0",
     "element-plus": "^2.12.0",
     "i": "^0.3.7",
     "pinia": "^3.0.4",
     "vue": "^3.5.25",
+    "vue-echarts": "^8.0.1",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
