--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
+    "china-map-data": "^1.0.4",
     "countup.js": "^2.9.0",
     "echarts": "^6.0.0",
     "element-plus": "^2.12.0",
